force-app/main/default/objects/CEMS_Employee_Award__c/CEMS_Employee_Award__c.object-meta.xml
<CustomObject>
    <label>Employee Award</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>Employee Award ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Awards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>