force-app/main/default/objects/CEMS_Employee_Award__c/fields/CEMS_Award__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Award__c</fullName>
    <label>Award</label>
    <referenceTo>CEMS_Award__c</referenceTo>
    <relationshipLabel>Employee Awards</relationshipLabel>
    <relationshipName>Employee_Awards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>