force-app/main/default/objects/CEMS_Employee_Award__c/fields/CEMS_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Award_Date__c</fullName>
    <label>Award Date</label>
    <type>Date</type>
</CustomField>