force-app/main/default/objects/CEMS_Employee_Award__c/fields/CEMS_Award_URL__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Award_URL__c</fullName>
    <label>Award URL</label>
    <type>Url</type>
</CustomField>