force-app/main/default/objects/CEMS_Employee_Award__c/fields/CEMS_Employee__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Employee__c</fullName>
    <label>Employee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CEMS_Personnel__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CEMS_Personnel__c</referenceTo>
    <relationshipLabel>Employee Awards</relationshipLabel>
    <relationshipName>Employee_Awards</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>