force-app/main/default/objects/CEMS_Employee_Award__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CEMS_Employee__c</columns>
    <columns>CEMS_Award__c</columns>
    <columns>CEMS_Award_Date__c</columns>
    <columns>CEMS_Award_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>